--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,46 +1,190 @@
-$primary: linear-gradient(to right, hsl(283, 100%, 27%), hsl(276, 100%, 41%));
-$text: hsl(0, 0%, 100%);
+@import "./animtion";
+
+// variables
+
+$white: hsl(0, 0%, 100%);
+$black: hsl(0, 0%, 7%);
+$fire: rgb(255, 81, 0);
+
+// mixins
+@mixin flexbox($dir, $align, $justify) {
+  display: flex;
+  align-items: $align;
+  justify-content: $justify;
+  flex-direction: $dir;
+}
 
 * {
   padding: 0%;
   margin: 0%;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
   font-size: 62.5%;
-  box-sizing: border-box;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: $primary;
-  color: $text;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  padding: 0 2rem;
+  font-family: "Press Start 2P", cursive;
+  font-size: 1.6rem;
+}
+
+.wrapper {
+  background: url("../img/bg.jpeg");
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+  padding: 1em;
 }
 
 .container {
-  max-width: 80rem;
+  max-width: 114rem;
   margin: 0 auto;
-  border: 4px solid transparent;
-  border-right-color: $text;
-  border-radius: 0.5rem;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-  padding: 2rem;
-  background: $primary;
+}
 
-  h1 {
-    text-align: center;
-    font-size: 3rem;
-    margin-bottom: 0.4rem;
+.game {
+  @include flexbox(column, center, center);
+
+  &__scoreboard {
+    margin-top: 2rem;
+    background-color: $white;
+    width: 40rem;
+    border-radius: 4px;
+    opacity: 0;
+    @include flexbox(row, center, center);
   }
 
-  p {
-    font-size: 1.8rem;
-    text-align: center;
+  &__player {
+    position: relative;
+    width: 100%;
+    padding: 2em;
+    @include flexbox(column, center, center);
+    transition: all 0.2s ease-in-out;
+
+    &:first-child {
+      border-right: 1px solid rgba(17, 17, 17, 0.363);
+    }
+
+    &:hover {
+      background-color: #ccc;
+    }
+
+    &--title {
+      font-size: 1.6rem;
+      margin-bottom: 2rem;
+    }
+
+    &--score {
+      font-size: 1.5rem;
+    }
+
+    &--winning {
+      position: absolute;
+      bottom: 10%;
+      left: 4%;
+      font-size: 0.8rem;
+    }
+  }
+
+  &__container {
+    margin-top: 4rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  &__character {
+    cursor: pointer;
+    position: relative;
+    transition: all 0.2s ease;
+    opacity: 0;
+
+    &:last-child {
+      transform: scaleX(-1);
+    }
+  }
+
+  &__controllers {
+    .control {
+      margin-top: -40rem;
+      outline: none;
+      border: none;
+      padding: 1.4rem 3rem;
+      border-radius: 4px;
+      background-color: $black;
+      color: $white;
+      font-size: 1.3rem;
+      font-family: inherit;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        background-color: lighten($black, 5%);
+      }
+    }
+  }
+
+  &__bullet {
+    &--one,
+    &--two {
+      position: absolute;
+      height: 4px;
+      width: 40px;
+      border-radius: 50%;
+      background-color: $fire;
+
+      &.forplayerOne {
+        animation: forplayerOne linear 0.5s;
+      }
+
+      &.forplayerTwo {
+        animation: forplayerTwo linear 0.5s;
+      }
+
+      &::after,
+      &::before {
+        content: "";
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-color: $fire;
+        border-radius: 50%;
+      }
+
+      &::after {
+        bottom: 140%;
+        left: 0;
+        transform: rotate(-4deg);
+      }
+
+      &::before {
+        top: 140%;
+        left: 0;
+        transform: rotate(4deg);
+      }
+    }
+
+    &--one {
+      top: 58%;
+      left: 36%;
+      // opacity: 9;
+    }
+
+    &--two {
+      top: 37%;
+      left: 34%;
+    }
+  }
+
+  &__round {
+    margin: 2em 0;
+
+    h4 {
+      color: $white;
+      font-size: 3rem;
+      transition: all 0.2s ease-in-out;
+      opacity: 0;
+      margin-top: 2rem;
+    }
   }
 }
